--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-color: #f8fafc;
+  background-color: #EFECE7;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
@@ -33,4 +33,8 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+h1 {
+  text-transform: uppercase;
 }
